Fix filter function
